@@ -24,9 +24,6 @@
 # Hadoop home. Required
 # export HADOOP_HOME=
 
-# HBase home. optional
-# export HBASE_HOME=
-
 # The java implementation to use.  Required.
 # export JAVA_HOME=/usr/java/default
 
@@ -82,5 +79,5 @@ export TAJO_WORKER_STANDBY_MODE=true
 # Tajo PullServer mode. the default mode is standalone mode
 # export TAJO_PULLSERVER_STANDALONE=false
 
-# It must be required to use HBase
+# HBase home directory. It is opitional, but is required mandatorily to use HBase.
 # export HBASE_HOME=
